# full-stack-projects

./: .gitignore
docker-compose-demo/: compose.yaml
docker-compose-demo/client/: Dockerfile  package-lock.json  package.json
docker-compose-demo/client/src/: App.jsx  Utilities.jsx  index.css  main.jsx
docker-compose-demo/nginx/: default.conf
docker-compose-demo/server/: Dockerfile  compose.yaml  requirements.txt
docker-compose-demo/server/task_api/: asgi.py  settings.py  urls.py  wsgi.py
docker-compose-demo/server/task_app/: urls.py  (+3 more)
food-app-project/: compose.yaml
food-app-project/server/: Dockerfile  compose.yaml  manage.py  pyproject.toml  requirements.txt
food-app-project/server/food_app/: models.py  serializers.py  urls.py  views.py
food-app-project/server/food_app/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_alter_food_category.py
food-app-project/server/food_app_proj/: asgi.py  settings.py  urls.py  wsgi.py
food-app-project/server/location_app/: models.py  serializers.py  urls.py  views.py
food-app-project/server/location_app/migrations/: 0001_initial.py  0002_initial.py
food-app-project/server/price_app/: models.py  serializers.py  urls.py  views.py
food-app-project/server/price_app/migrations/: 0001_initial.py
food-app-project/server/stores_app/: apps.py  models.py  serializers.py  urls.py  views.py
food-app-project/server/stores_app/migrations/: 0001_initial.py  0002_initial.py
food-app-project/server/user_app/: admin.py  models.py  views.py
food-app-project/server/user_app/migrations/: 0001_initial.py
(+11 files in other folders)
